<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tam_tracking_msgs</name>
  <version>1.0.0</version>
  <description>ROS2 Package for Tracking Debugging Messages</description>
  <maintainer email="dominic.ebner@tum.de">Dominic Ebner</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>unique_identifier_msgs</build_depend>
  <build_depend>autoware_auto_perception_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
