<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_msgs</name>
  <version>3.0.0</version>
  <description>Message set for the autonomous racing software developed at TUM</description>
  <maintainer email="simon.sagmeister@tum.de">Simon Sagmeister</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export><build_type>ament_cmake</build_type></export>
</package>
